# URSSimEnvironments

./: .gitignore  .rosinstall  README.md
FF-v2.3/: ff  urs_d.pddl  urs_p0.pddl  urs_p1.pddl  urs_q0.pddl  urs_q1.pddl  urs_q2.pddl
action_controller/: CMakeLists.txt  README.txt
action_controller/src/: actionController.cpp  temp.cpp
cpa/: mult5zswi.pl  nowarning.pl  urs_domain.pddl
cpa/cpa/: CMakeLists.txt  lcp.lex  lcp.y  main.cpp  swi_script.sh
cpa/pddl2a/: .gitignore  README  UPDATES  define.h  lcp.y  main.cpp  planner.cpp  reader.h  utility.h
hector_gazebo/hector_gazebo_plugins/: CMakeLists.txt  package.xml
hector_gazebo/hector_gazebo_thermal_camera/: CMakeLists.txt  package.xml
hector_keyboard_controller/: CMakeLists.txt  package.xml
hector_keyboard_controller/src/: hector_keyboard_controller.cpp
hector_keyboard_teleop/: CMakeLists.txt  package.xml
hector_keyboard_teleop/launch/: spawn_four_quadrotors.launch
hector_keyboard_teleop/src/: hector_keyboard_teleop.cpp
hector_quadrotor/hector_quadrotor_gazebo_plugins/: CMakeLists.txt  package.xml
hector_slam/hector_map_tools/: CMakeLists.txt  package.xml
issues/: userStudy.txt
moveit_config/quadrotor_with_asus/: .setup_assistant
moveit_config/quadrotor_with_kinect/: .setup_assistant  CMakeLists.txt  package.xml
quadrotor_with_asus/: CMakeLists.txt
quadrotor_with_asus/config/: quadrotor.srdf
quadrotor_with_asus/launch/: fake_moveit_controller_manager.launch.xml  moveit_rviz.launch  plan_and_execute.launch  quadrotor_moveit_controller_manager.launch.xml  quadrotor_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  setup_assistant.launch  warehouse.launch
sh_files/: 1-simulator.sh  3-planner.sh
urs_moveit/action_controller/: package.xml
urs_moveit/action_controller/src/: allessioActionController.cpp
urs_moveit/moveit_simple_controller_manager/: CMakeLists.txt  README.txt  package.xml
urs_moveit/moveit_simple_controller_manager/include/moveit_simple_controller_manager/: multi_dof_follow_joint_trajectory_handle.h
urs_moveit/moveit_simple_controller_manager/src/: moveit_simple_controller_manager.cpp
urs_moveit/sh_files/: 1-simulator.sh  2-controller.sh  3-planner.sh
urs_planner/: CMakeLists.txt  package.xml
urs_planner/launch/: spawn_quadrotors.launch
urs_planner/src/: urs_planner.cpp
urs_sim_environments/: CMakeLists.txt  packages.xml
urs_wearable/: CMakeLists.txt  package.xml
urs_wearable/action/: Actions.action  Drone.action
urs_wearable/archive/: CMakeLists.txt
urs_wearable/cpa/: CMakeLists.txt  Makefile  run.sh
urs_wearable/cpa/cpa/: .gitignore  CMakeLists.txt  Makefile  action.pb.cc  built_date  cpa+  lcp.tab.cpp  lcp.tab.hpp  lex.c  lex.yy.cpp  main.cpp  mult5zswi.pl  new.pl  objects.h  pddl2pl.pl  planner.cpp  planner.h  state.cpp  swi_script.sh  theory_0.al  urs.pddl
urs_wearable/cpa/cpa/generated_proto/: action.pb.cc
urs_wearable/include/: colormod.h  pool.h  protobuf_helper.h
urs_wearable/launch/: action_server.launch  drone_action.launch  exec_monitor.launch  gas_station.launch  gas_station_spawn_four_quadrotors.launch  gimbal_demo.launch  nmsu.launch  nmsu_trimmed.launch  rosbridge.launch  spawn_four_quadrotors.launch  spawn_quadrotors.launch  world.launch
urs_wearable/madagascar/: .gitignore  Makefile  invariants.c  lexer.lex  main.c
urs_wearable/msg/: Action.msg  ActionActiveRegionInsert.msg  ActionActiveRegionUpdate.msg  ActionAddLocation.msg  ActionAscend.msg  ActionDescend.msg  ActionFlyAbove.msg  ActionFlyTo.msg  ActionGather.msg  ActionKeyAdd.msg  ActionKeyPick.msg  ActionLand.msg  ActionMove.msg  ActionRotate.msg  ActionScan.msg  ActionTakeOff.msg  ActionTakeoff.msg  Area.msg  DestEuler.msg  Feedback.msg  Location.msg  ObjectArea.msg  ObjectDrone.msg  ObjectDroneID.msg  ObjectKeyID.msg  ObjectLocation.msg  ObjectLocationID.msg  Pose.msg  PoseEuler.msg  Predicate.msg  PredicateAbove.msg  PredicateActiveRegion.msg  PredicateAligned.msg  PredicateAt.msg  PredicateClosest.msg  PredicateCollided.msg  PredicateDroneAbove.msg  PredicateDroneAt.msg  PredicateHovered.msg  PredicateIn.msg  (+11 more)
urs_wearable/proto/: action.proto  command.proto  planning.proto  predicate.proto  state.proto  wearable.proto
urs_wearable/rviz_cfg/: four_quadrotors.rviz
urs_wearable/src/: action_server.cpp  controller.cpp  drone_action.cpp  exec_monitor.cpp  fake_wearable.cpp  fake_wearable_1.cpp  fake_wearable_2.cpp  keyboard_teleop.cpp  knowledge_base.cpp  navigator.cpp  protobuf_helper.cpp  try_hector.cpp
urs_wearable/srv/: AddArea.srv  AddDroneGoal.srv  AddLocation.srv  ControllerSetDest.srv  Gather.srv  GetDest.srv  GetPlan.srv  GetPose.srv  GetState.srv  LocationAdd.srv  LocationRemove.srv  RemoveArea.srv  RemoveDroneGoal.srv  RemoveLocation.srv  Scan.srv  SetActiveRegion.srv  SetAltitude.srv  SetDest.srv  SetDroneActionResult.srv  SetDroneActionStatus.srv  SetGoal.srv  SetOrientation.srv
urs_wearable/worlds/: nmsu.world  (+4 more)
(+171 files in other folders)
